# dkatchr-core

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
dkatchr/: .env.example  __init__.py  __main__.py  config.py  logger.py  requirements.txt
dkatchr/cli/: __init__.py  args.py  dry_run.py  main.py  run.py
dkatchr/clients/: __init__.py  epss.py  exploitdb.py  github.py  kev.py  metasploit.py  nvd.py  osv.py  ratelimit.py  registry_meta.py  top_packages.py
dkatchr/clients/resolvers/: __init__.py  _base.py  crates.py  maven.py  nuget.py  packagist.py  pypi.py  rubygems.py
dkatchr/core/: __init__.py  attribution.py  confusion.py  inventory.py  osv_enrichment.py  reachability.py  rules.py  scanner.py  typosquat.py
dkatchr/output/: __init__.py  csv_writer.py  schema.py
dkatchr/parsers/: __init__.py  _common.py  cargo.py  composer.py  go.py  maven.py  npm.py  nuget.py  pypi.py  ruby.py
dkatchr/storage/: __init__.py  attribution_cache.py  inventory_cache.py  reachability_cache.py
